# benchOKR

./: CMakeLists.txt  INDEX  README.md  directives.txt  projetDev.cbp
Alban/: Alban.pro  CMakeLists.txt
David/: AlbanVersionDavid.pro  AlbanVersionDavid.pro.user.119d1ed.3.3-pre1
SimpleOctree/: Octree.h  OctreePoint.h
TestQGL/: TestQGL.pro  main.cpp  simpleViewer.cpp  simpleViewer.h
build-AlbanVersionDavid-Desktop_Qt_5_4_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.benchOKR.Debug  object_script.benchOKR.Release
doc/: 24-03-15.Detail fonctionnalite.txt  Etude Fonctionelle.docx  Etude FonctionelleVersion24Mars.docx  etudeFonctionelleVersion25Mars.docx
include/: Arbre.h  CMakeLists.txt  Fichier.h  KdTree.h  Noeud.h  NoeudKd.h  NoeudOctree.h  NoeudR.h  Octree.h  Point.h  Point3D.h  RTree.h  Voxel.h  mainwindow.h  simpleOctree.h  simpleViewer.h
maryame/: projets_dev.pro
ressources/: mainwindow.ui
src/: Arbre.cpp  CMakeLists.txt  Fichier.cpp  KdTree.cpp  Noeud.cpp  NoeudKd.cpp  NoeudOctree.cpp  NoeudR.cpp  Octree.cpp  Point.cpp  Point3D.cpp  RTree.cpp  Test_stockerFichierKdtree.txt  Voxel.cpp  main.cpp  mainwindow.cpp  simpleOctree.cpp  simpleViewer.cpp
tests/: main.cpp  tests.pro  testsFichier.cpp  testsFichier.h  testsVoxel.cpp  testsVoxel.h
x86-win32/: Makefile  Makefile.Debug  Makefile.Release  object_script.benchOKR.Debug  object_script.benchOKR.Release
x86_64-gnu/: .qglviewer.xml  .qglviewer1.xml  .qglviewer10.xml  .qglviewer2.xml  .qglviewer3.xml  .qglviewer4.xml  .qglviewer5.xml  .qglviewer6.xml  .qglviewer7.xml  (+8 more)
(+144 files in other folders)
